Make data load function for local data and one for google drive files

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -248,219 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========================================\n",
-      "🚀 Basic Data Overview\n",
-      "========================================\n",
-      "🗂 Shape of the DataFrame: 14442792 rows, 41 columns\n",
-      "\n",
-      "🔍 First 5 rows of the DataFrame:\n",
-      "         ID Country  VFN              Mp              Mh  \\\n",
-      "0  280060.0      UK  NaN             NaN         UNKNOWN   \n",
-      "1  280060.0      UK  NaN             NaN         AUDI AG   \n",
-      "2  280060.0      PL  NaN     VW GROUP PC      VOLKSWAGEN   \n",
-      "3  280060.0      HU  NaN             NaN  HYUNDAI ASSAN    \n",
-      "4  280060.0      HU  NaN  GENERAL MOTORS            OPEL   \n",
-      "\n",
-      "                                Man       MMS                  Tan  \\\n",
-      "0                           UNKNOWN  VAUXHALL                  NaN   \n",
-      "1                               NaN      AUDI                  NaN   \n",
-      "2                     VOLKSWAGEN AG       NaN  e1*2001/116*0211*27   \n",
-      "3  HYUNDAI ASSAN OTOMOTIV SANAYI VE   Hyundai  e11*2007/46*0192*04   \n",
-      "4                      ADAM OPEL AG      Opel   e1*2007/46*0374*14   \n",
-      "\n",
-      "             T       Va  ...  De  Vf Status    year Date of registration  \\\n",
-      "0  A-H/MONOCAB     BF11  ... NaN NaN      P  2010.0                  NaN   \n",
-      "1           B8  LCAKAQ1  ... NaN NaN      P  2011.0                  NaN   \n",
-      "2           1T   CFHCAF  ... NaN NaN      P  2012.0                  NaN   \n",
-      "3          ELH    F5D31  ... NaN NaN      P  2013.0                  NaN   \n",
-      "4         0G-A  CAHBC12  ... NaN NaN      P  2014.0                  NaN   \n",
-      "\n",
-      "   Fuel consumption   ech  RLFI  Electric range (km)  #identical occurences  \n",
-      "0                NaN  NaN   NaN                  NaN                    1.0  \n",
-      "1                NaN  NaN   NaN                  NaN                    1.0  \n",
-      "2                NaN  NaN   NaN                  NaN                    1.0  \n",
-      "3                NaN  NaN   NaN                  NaN                   30.0  \n",
-      "4                NaN  NaN   NaN                  NaN                    1.0  \n",
-      "\n",
-      "[5 rows x 41 columns]\n",
-      "\n",
-      "📊 DataFrame Information:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14442792 entries, 0 to 14442791\n",
-      "Data columns (total 41 columns):\n",
-      " #   Column                 Dtype   \n",
-      "---  ------                 -----   \n",
-      " 0   ID                     float32 \n",
-      " 1   Country                category\n",
-      " 2   VFN                    category\n",
-      " 3   Mp                     category\n",
-      " 4   Mh                     category\n",
-      " 5   Man                    category\n",
-      " 6   MMS                    category\n",
-      " 7   Tan                    category\n",
-      " 8   T                      category\n",
-      " 9   Va                     category\n",
-      " 10  Ve                     category\n",
-      " 11  Mk                     category\n",
-      " 12  Cn                     category\n",
-      " 13  Ct                     category\n",
-      " 14  Cr                     category\n",
-      " 15  r                      float32 \n",
-      " 16  m (kg)                 float32 \n",
-      " 17  Mt                     float32 \n",
-      " 18  Enedc (g/km)           float32 \n",
-      " 19  Ewltp (g/km)           float32 \n",
-      " 20  W (mm)                 float32 \n",
-      " 21  At1 (mm)               float32 \n",
-      " 22  At2 (mm)               float32 \n",
-      " 23  Ft                     category\n",
-      " 24  Fm                     category\n",
-      " 25  ec (cm3)               float32 \n",
-      " 26  ep (KW)                float32 \n",
-      " 27  z (Wh/km)              float32 \n",
-      " 28  IT                     category\n",
-      " 29  Ernedc (g/km)          float32 \n",
-      " 30  Erwltp (g/km)          float32 \n",
-      " 31  De                     float32 \n",
-      " 32  Vf                     float32 \n",
-      " 33  Status                 category\n",
-      " 34  year                   float32 \n",
-      " 35  Date of registration   category\n",
-      " 36  Fuel consumption       float32 \n",
-      " 37  ech                    category\n",
-      " 38  RLFI                   category\n",
-      " 39  Electric range (km)    float32 \n",
-      " 40  #identical occurences  float32 \n",
-      "dtypes: category(21), float32(20)\n",
-      "memory usage: 1.7 GB\n",
-      "\n",
-      "📈 Summary Statistics of Numeric Columns:\n",
-      "                 ID             r        m (kg)            Mt  Enedc (g/km)  \\\n",
-      "count  1.444279e+07  1.444279e+07  1.442872e+07  1.063981e+07  8.976101e+06   \n",
-      "mean   3.617678e+07  6.658795e+00  1.703628e+03  1.828882e+03  1.281917e+02   \n",
-      "std    4.393210e+07  1.099097e+02  3.443328e+02  3.689104e+02  4.481242e+01   \n",
-      "min    1.000000e+00  1.000000e+00  1.000000e+00  0.000000e+00  0.000000e+00   \n",
-      "25%    1.901051e+06  1.000000e+00  1.393000e+03  1.533000e+03  1.110000e+02   \n",
-      "50%    9.007275e+06  1.000000e+00  1.590000e+03  1.748000e+03  1.270000e+02   \n",
-      "75%    6.501453e+07  1.000000e+00  1.825000e+03  2.003000e+03  1.490000e+02   \n",
-      "max    1.496950e+08  5.909200e+04  9.928000e+03  6.612000e+03  9.850000e+02   \n",
-      "\n",
-      "       Ewltp (g/km)        W (mm)      At1 (mm)      At2 (mm)      ec (cm3)  \\\n",
-      "count  1.087719e+07  1.219070e+07  1.191959e+07  1.170436e+07  1.382890e+07   \n",
-      "mean   1.379232e+02  2.474290e+03  1.729107e+03  1.717049e+03  1.825177e+03   \n",
-      "std    5.580564e+01  3.241919e+02  1.746379e+02  1.635476e+02  6.009905e+02   \n",
-      "min    0.000000e+00  1.000000e+00  1.550000e+02  0.000000e+00  0.000000e+00   \n",
-      "25%    1.280000e+02  2.626000e+03  1.538000e+03  1.536000e+03  1.496000e+03   \n",
-      "50%    1.460000e+02  2.700000e+03  1.569000e+03  1.570000e+03  1.950000e+03   \n",
-      "75%    1.700000e+02  2.850000e+03  1.605000e+03  1.611000e+03  1.995000e+03   \n",
-      "max    7.300000e+02  6.100000e+03  5.361000e+03  1.583000e+04  8.463800e+04   \n",
-      "\n",
-      "            ep (KW)     z (Wh/km)  Ernedc (g/km)  Erwltp (g/km)  \\\n",
-      "count  1.304137e+07  1.301226e+06   1.804377e+06   2.854646e+06   \n",
-      "mean   1.338711e+02  1.911042e+02   1.923270e+00   1.528738e+00   \n",
-      "std    6.176083e+01  5.642786e+01   8.527987e-01   4.958403e-01   \n",
-      "min    0.000000e+00  1.000000e+00   0.000000e+00   0.000000e+00   \n",
-      "25%    9.200000e+01  1.600000e+02   1.200000e+00   1.100000e+00   \n",
-      "50%    1.100000e+02  1.770000e+02   1.700000e+00   1.660000e+00   \n",
-      "75%    1.430000e+02  2.150000e+02   2.600000e+00   1.950000e+00   \n",
-      "max    1.770000e+03  2.756000e+03   9.200000e+00   2.000000e+01   \n",
-      "\n",
-      "                  De            Vf          year  Fuel consumption   \\\n",
-      "count  326737.000000  1.143262e+06  1.444279e+07       3.972676e+06   \n",
-      "mean        0.044470  4.228077e-02  2.046195e+03       5.793165e+00   \n",
-      "std         0.339691  1.983620e-01  2.659248e+01       2.254286e+00   \n",
-      "min        -1.000000  0.000000e+00  2.010000e+03       1.000000e-01   \n",
-      "25%         0.001000  0.000000e+00  2.018000e+03       5.000000e+00   \n",
-      "50%         0.015000  0.000000e+00  2.020000e+03       5.800000e+00   \n",
-      "75%         0.030000  0.000000e+00  2.022000e+03       6.800000e+00   \n",
-      "max         7.200000  2.000000e+00  2.023000e+03       9.900000e+01   \n",
-      "\n",
-      "       Electric range (km)  #identical occurences  \n",
-      "count         1.094995e+06           1.444279e+07  \n",
-      "mean          2.041645e+02           5.018473e+00  \n",
-      "std           1.918173e+02           5.717576e+01  \n",
-      "min           1.000000e+00           1.000000e+00  \n",
-      "25%           5.600000e+01           1.000000e+00  \n",
-      "50%           7.600000e+01           1.000000e+00  \n",
-      "75%           4.120000e+02           2.000000e+00  \n",
-      "max           8.830000e+02           2.744900e+04  \n",
-      "\n",
-      "❓ Missing Values Overview:\n",
-      "                          Dtype Missing Count Percent Missing\n",
-      "ID                      float32             0           0.00%\n",
-      "Country                category             0           0.00%\n",
-      "VFN                    category       6022343          41.70%\n",
-      "Mp                     category       1538457          10.65%\n",
-      "Mh                     category             0           0.00%\n",
-      "Man                    category        310768           2.15%\n",
-      "MMS                    category       6048284          41.88%\n",
-      "Tan                    category        490543           3.40%\n",
-      "T                      category         62037           0.43%\n",
-      "Va                     category        100484           0.70%\n",
-      "Ve                     category        225223           1.56%\n",
-      "Mk                     category         42908           0.30%\n",
-      "Cn                     category         49370           0.34%\n",
-      "Ct                     category         24710           0.17%\n",
-      "Cr                     category       2826753          19.57%\n",
-      "r                       float32             4           0.00%\n",
-      "m (kg)                  float32         14075           0.10%\n",
-      "Mt                      float32       3802983          26.33%\n",
-      "Enedc (g/km)            float32       5466691          37.85%\n",
-      "Ewltp (g/km)            float32       3565598          24.69%\n",
-      "W (mm)                  float32       2252091          15.59%\n",
-      "At1 (mm)                float32       2523206          17.47%\n",
-      "At2 (mm)                float32       2738433          18.96%\n",
-      "Ft                     category         24373           0.17%\n",
-      "Fm                     category         85880           0.59%\n",
-      "ec (cm3)                float32        613895           4.25%\n",
-      "ep (KW)                 float32       1401419           9.70%\n",
-      "z (Wh/km)               float32      13141566          90.99%\n",
-      "IT                     category       9564034          66.22%\n",
-      "Ernedc (g/km)           float32      12638415          87.51%\n",
-      "Erwltp (g/km)           float32      11588146          80.23%\n",
-      "De                      float32      14116055          97.74%\n",
-      "Vf                      float32      13299530          92.08%\n",
-      "Status                 category             0           0.00%\n",
-      "year                    float32             0           0.00%\n",
-      "Date of registration   category       9206861          63.75%\n",
-      "Fuel consumption        float32      10470116          72.49%\n",
-      "ech                    category      13991213          96.87%\n",
-      "RLFI                   category      13685744          94.76%\n",
-      "Electric range (km)     float32      13347797          92.42%\n",
-      "#identical occurences   float32             0           0.00%\n",
-      "\n",
-      "🔑 Unique Values in Categorical/Object Columns:\n",
-      "Column 'Country' has 30 unique values\n",
-      "Column 'VFN' has 29048 unique values\n",
-      "Column 'Mp' has 46 unique values\n",
-      "Column 'Mh' has 261 unique values\n",
-      "Column 'Man' has 477 unique values\n",
-      "Column 'MMS' has 11561 unique values\n",
-      "Column 'Tan' has 49909 unique values\n",
-      "Column 'T' has 26611 unique values\n",
-      "Column 'Va' has 72533 unique values\n",
-      "Column 'Ve' has 182640 unique values\n",
-      "Column 'Mk' has 1745 unique values\n",
-      "Column 'Cn' has 80814 unique values\n",
-      "Column 'Ct' has 9 unique values\n",
-      "Column 'Cr' has 2 unique values\n",
-      "Column 'Ft' has 11 unique values\n",
-      "Column 'Fm' has 6 unique values\n",
-      "Column 'IT' has 1928 unique values\n",
-      "Column 'Status' has 1 unique values\n",
-      "Column 'Date of registration' has 1095 unique values\n",
-      "Column 'ech' has 36 unique values\n",
-      "Column 'RLFI' has 1544 unique values\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -552,9 +342,7 @@
     "            print(f\"Column '{col}' has {count} unique values\")\n",
     "    else:\n",
     "        print(\"No categorical or object columns found.\")\n",
-    "        \n",
-    "# Call the function to inspect your DataFrame\n",
-    "inspect_data(df)\n"
+    "        "
    ]
   },
   {
@@ -933,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.E Outlier Handling "
+    "# 1.Y Outlier Handling "
    ]
   },
   {
@@ -1513,11 +1301,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'save_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Saving data before the next pipline steps \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# save_data(df, 'my_data.csv', '/path/to/save')\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[43msave_data\u001b[49m(df \u001b[38;5;241m=\u001b[39m df, file_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData_Preprocessed_Step2_RegressionModel_Alex.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, file_path \u001b[38;5;241m=\u001b[39m data_path)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'save_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving data before the next pipline steps \n",
+    "# Example usage:\n",
+    "# save_data(df, 'my_data.csv', '/path/to/save')\n",
+    "\n",
+    "save_data(df = df, file_name = 'Data_Preprocessed_Step2_RegressionModel_Alex.csv', file_path = data_path)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (287372755.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    df = load_data_gdrive(file_name=, file_path=, file_id=)\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The beginning of each section \n",
+    "# Loading the data frame \n",
+    "# Inspect the data frame \n",
+    "df = load_data_local('Data_Preprocessed_Step1.csv', data_path)\n",
+    "\n",
+    "# Oder eben \n",
+    "\n",
+    "# df = load_data_gdrive(file_name=?, file_path=?, file_id=?)\n",
+    "\n",
+    "inspect_data(df)"
+   ]
   },
   {
    "cell_type": "markdown",
