Current work DataPipeline.ipynb

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,9 +996,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# The global preprocessing is not done yet (Sunday, Oct 20), so in order not to be stuck, I need to work with my own data and preprocessing. \n",
+    "# Also, I dont get how the download of the most updated dataset is performed above. (the first Andreas one, but loading it up from here. This can be changed later: EU_all_current_shared.parquet)\n",
+    "# I will also load here libaries, so that I dont need to run the cells above\n",
+    "\n",
+    "# import libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# enabling the display of all columns\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "# reading the file\n",
+    "\n",
+    "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\Data\\EU all_current_shared.parquet')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      Data Type  Unique Values  Missing Values (%)\n",
+      "De                      float32            NaN           97.737716\n",
+      "ech                    category           36.0           96.873326\n",
+      "RLFI                   category         1544.0           94.758299\n",
+      "Electric range (km)     float32            NaN           92.418398\n",
+      "Vf                      float32            NaN           92.084204\n",
+      "z (Wh/km)               float32            NaN           90.990482\n",
+      "Ernedc (g/km)           float32            NaN           87.506730\n",
+      "Erwltp (g/km)           float32            NaN           80.234805\n",
+      "Fuel consumption        float32            NaN           72.493712\n",
+      "IT                     category         1928.0           66.220119\n",
+      "Date of registration   category         1095.0           63.747100\n",
+      "MMS                    category        11561.0           41.877526\n",
+      "VFN                    category        29048.0           41.697914\n",
+      "Enedc (g/km)            float32            NaN           37.850652\n",
+      "Mt                      float32            NaN           26.331356\n",
+      "Ewltp (g/km)            float32            NaN           24.687734\n",
+      "Cr                     category            2.0           19.572068\n",
+      "At2 (mm)                float32            NaN           18.960551\n",
+      "At1 (mm)                float32            NaN           17.470348\n",
+      "W (mm)                  float32            NaN           15.593183\n",
+      "Mp                     category           46.0           10.652075\n",
+      "ep (KW)                 float32            NaN            9.703242\n",
+      "ec (cm3)                float32            NaN            4.250529\n",
+      "Tan                    category        49909.0            3.396455\n",
+      "Man                    category          477.0            2.151717\n",
+      "Ve                     category       182640.0            1.559415\n",
+      "Va                     category        72533.0            0.695738\n",
+      "Fm                     category            6.0            0.594622\n",
+      "T                      category        26611.0            0.429536\n",
+      "Cn                     category        80814.0            0.341831\n",
+      "Mk                     category         1745.0            0.297089\n",
+      "Ct                     category            9.0            0.171089\n",
+      "Ft                     category           11.0            0.168755\n",
+      "m (kg)                  float32            NaN            0.097453\n",
+      "r                       float32            NaN            0.000028\n",
+      "Status                 category            1.0            0.000000\n",
+      "Mh                     category          261.0            0.000000\n",
+      "ID                      float32            NaN            0.000000\n",
+      "Country                category           30.0            0.000000\n",
+      "year                    float32            NaN            0.000000\n",
+      "#identical occurences   float32            NaN            0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Check summary\n",
     "\n",
@@ -1088,6 +1163,8 @@
     "# List of columns to be exclude from analysis \n",
     "\n",
     "columns_to_remove = [\n",
+    "    'MMS',\n",
+    "    'Enedc (g/km)',\n",
     "    'De', \n",
     "    'Mk',\n",
     "    'ech', \n",
@@ -1583,7 +1660,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Project_DS_CO2",
+   "display_name": "aug24_bds_int---co2",
    "language": "python",
    "name": "python3"
   },
@@ -1597,7 +1674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
