Current work DataPipeline.ipynb

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,12 +1017,15 @@
     "\n",
     "# reading the file\n",
     "\n",
-    "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\Data\\EU all_current_shared.parquet')\n"
+    "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\Data\\EU all_current_shared.parquet')\n",
+    "\n",
+    "# Filter data from 2018 to 2023\n",
+    "df = df[df['year'].between(2018, 2023)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1030,45 +1033,45 @@
      "output_type": "stream",
      "text": [
       "                      Data Type  Unique Values  Missing Values (%)\n",
-      "De                      float32            NaN           97.737716\n",
-      "ech                    category           36.0           96.873326\n",
-      "RLFI                   category         1544.0           94.758299\n",
-      "Electric range (km)     float32            NaN           92.418398\n",
-      "Vf                      float32            NaN           92.084204\n",
-      "z (Wh/km)               float32            NaN           90.990482\n",
-      "Ernedc (g/km)           float32            NaN           87.506730\n",
-      "Erwltp (g/km)           float32            NaN           80.234805\n",
-      "Fuel consumption        float32            NaN           72.493712\n",
-      "IT                     category         1928.0           66.220119\n",
-      "Date of registration   category         1095.0           63.747100\n",
-      "MMS                    category        11561.0           41.877526\n",
-      "VFN                    category        29048.0           41.697914\n",
-      "Enedc (g/km)            float32            NaN           37.850652\n",
-      "Mt                      float32            NaN           26.331356\n",
-      "Ewltp (g/km)            float32            NaN           24.687734\n",
-      "Cr                     category            2.0           19.572068\n",
-      "At2 (mm)                float32            NaN           18.960551\n",
-      "At1 (mm)                float32            NaN           17.470348\n",
-      "W (mm)                  float32            NaN           15.593183\n",
-      "Mp                     category           46.0           10.652075\n",
-      "ep (KW)                 float32            NaN            9.703242\n",
-      "ec (cm3)                float32            NaN            4.250529\n",
-      "Tan                    category        49909.0            3.396455\n",
-      "Man                    category          477.0            2.151717\n",
-      "Ve                     category       182640.0            1.559415\n",
-      "Va                     category        72533.0            0.695738\n",
-      "Fm                     category            6.0            0.594622\n",
-      "T                      category        26611.0            0.429536\n",
-      "Cn                     category        80814.0            0.341831\n",
-      "Mk                     category         1745.0            0.297089\n",
-      "Ct                     category            9.0            0.171089\n",
-      "Ft                     category           11.0            0.168755\n",
-      "m (kg)                  float32            NaN            0.097453\n",
-      "r                       float32            NaN            0.000028\n",
+      "De                      float32            NaN           97.152324\n",
+      "ech                    category           36.0           96.064264\n",
+      "RLFI                   category         1544.0           93.401949\n",
+      "Electric range (km)     float32            NaN           90.456573\n",
+      "Vf                      float32            NaN           90.035902\n",
+      "z (Wh/km)               float32            NaN           88.790867\n",
+      "Ernedc (g/km)           float32            NaN           84.529493\n",
+      "Erwltp (g/km)           float32            NaN           75.248403\n",
+      "Fuel consumption        float32            NaN           65.376148\n",
+      "IT                     category         1864.0           58.082522\n",
+      "Date of registration   category         1095.0           54.366251\n",
+      "MMS                    category         1607.0           48.783678\n",
+      "Enedc (g/km)            float32            NaN           44.847890\n",
+      "VFN                    category        29048.0           26.615180\n",
+      "At2 (mm)                float32            NaN           18.305667\n",
+      "At1 (mm)                float32            NaN           18.196410\n",
+      "W (mm)                  float32            NaN           16.045285\n",
+      "Mt                      float32            NaN            7.400086\n",
+      "Mp                     category           35.0            5.658049\n",
+      "Ewltp (g/km)            float32            NaN            5.210578\n",
+      "ec (cm3)                float32            NaN            4.625855\n",
+      "ep (KW)                 float32            NaN            4.240944\n",
+      "Ve                     category        95293.0            0.948142\n",
+      "Cr                     category            2.0            0.618678\n",
+      "Tan                    category        22638.0            0.426048\n",
+      "Va                     category        18396.0            0.401418\n",
+      "Cn                     category        36790.0            0.306428\n",
+      "Ct                     category            9.0            0.103305\n",
+      "Mk                     category         1374.0            0.102677\n",
+      "T                      category         8709.0            0.070622\n",
+      "m (kg)                  float32            NaN            0.032387\n",
+      "Ft                     category            9.0            0.015052\n",
+      "Fm                     category            6.0            0.006075\n",
+      "Man                    category          222.0            0.000009\n",
       "Status                 category            1.0            0.000000\n",
-      "Mh                     category          261.0            0.000000\n",
+      "Mh                     category          160.0            0.000000\n",
       "ID                      float32            NaN            0.000000\n",
       "Country                category           30.0            0.000000\n",
+      "r                       float32            NaN            0.000000\n",
       "year                    float32            NaN            0.000000\n",
       "#identical occurences   float32            NaN            0.000000\n"
      ]
@@ -1103,7 +1106,8 @@
     "# Print the summary DataFrame\n",
     "print(summary_df)\n",
     "\n",
-    "# Show the "
+    "# Display the cleaned DataFrame shape\n",
+    "print(df.shape)"
    ]
   },
   {
@@ -1150,47 +1154,90 @@
     "\n",
     "___ NOT SURE WHERE THIS IS COMING FROM\n",
     "\n",
-    "- Electric_range\n",
     "- Non_Electric_Car: only one unique value. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# List of columns to be exclude from analysis \n",
     "\n",
     "columns_to_remove = [\n",
+    "    'De',\n",
+    "    'ech', \n",
+    "    'RLFI',\n",
+    "    'Electric range (km)',\n",
+    "    'Vf',\n",
+    "    'z (Wh/km)',\n",
+    "    'Ernedc (g/km)',\n",
+    "    'Erwltp (g/km)',\n",
+    "    'IT',\n",
+    "    'Date of registration',       \n",
     "    'MMS',\n",
     "    'Enedc (g/km)',\n",
-    "    'De', \n",
+    "    'VFN',\n",
+    "    'Mp',\n",
+    "    'Ve',\n",
+    "    'Cr',\n",
+    "    'Cr',\n",
+    "    'Tan',\n",
+    "    'Va',\n",
+    "    'Cn',\n",
+    "    'Ct',\n",
     "    'Mk',\n",
-    "    'ech', \n",
-    "    'RLFI', \n",
-    "    'Vf', \n",
-    "    'Ct', \n",
-    "    'Cn', \n",
-    "    'Cr', \n",
-    "    'IT',   \n",
-    "    'Non_Electric_Car', \n",
-    "    'Electric range (km)', \n",
-    "    'z (Wh/km)'\n",
+    "    'T',\n",
+    "    'Man',\n",
+    "    'Status',\n",
+    "    'ID',\n",
+    "    'r',\n",
+    "    '#identical occurences'  \n",
+    "\n",
     "]\n",
     "\n",
     "# Exclude \n",
-    "df_reg = df.drop(columns=columns_to_remove, errors='ignore') \n",
-    "\n",
-    "# Display the cleaned DataFrame shape\n",
-    "print(df_reg.shape)"
+    "df_reg = df.drop(columns=columns_to_remove, errors='ignore') \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Data Type  Unique Values  Missing Values (%)\n",
+      "Fuel consumption    float32            NaN           65.376148\n",
+      "At2 (mm)            float32            NaN           18.305667\n",
+      "At1 (mm)            float32            NaN           18.196410\n",
+      "W (mm)              float32            NaN           16.045285\n",
+      "Mt                  float32            NaN            7.400086\n",
+      "Ewltp (g/km)        float32            NaN            5.210578\n",
+      "ec (cm3)            float32            NaN            4.625855\n",
+      "ep (KW)             float32            NaN            4.240944\n",
+      "m (kg)              float32            NaN            0.032387\n",
+      "Ft                 category            9.0            0.015052\n",
+      "Fm                 category            6.0            0.006075\n",
+      "Country            category           30.0            0.000000\n",
+      "Mh                 category          160.0            0.000000\n",
+      "year                float32            NaN            0.000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(11473813, 14)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check summary\n",
     "\n",
@@ -1222,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,9 +1293,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Data Type  Unique Values  Missing Values (%)\n",
+      "Fuel consumption    float32            NaN           60.491448\n",
+      "Ewltp (g/km)        float32            NaN            1.273413\n",
+      "At1 (mm)            float32            NaN            0.000000\n",
+      "At2 (mm)            float32            NaN            0.000000\n",
+      "Country            category           28.0            0.000000\n",
+      "Fm                 category            6.0            0.000000\n",
+      "Ft                 category            9.0            0.000000\n",
+      "Mh                 category          108.0            0.000000\n",
+      "Mt                  float32            NaN            0.000000\n",
+      "W (mm)              float32            NaN            0.000000\n",
+      "ec (cm3)            float32            NaN            0.000000\n",
+      "ep (KW)             float32            NaN            0.000000\n",
+      "m (kg)              float32            NaN            0.000000\n",
+      "year                float32            NaN            0.000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(9720493, 14)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the data types of each column\n",
     "data_types = df_reg.dtypes\n",
